fix rate display on mobile

--- a/app/movie/[id]/components/MovieDescription/MovieDescription.module.scss
+++ b/app/movie/[id]/components/MovieDescription/MovieDescription.module.scss
@@ -7,6 +7,13 @@
     flex-direction: row;
   }
 
+  &__rate--mobile {
+    border: 1px solid $gray;
+    @include respond-to($mq-medium) {
+      display: none;
+    }
+  }
+
   &__details {
     display: flex;
     flex-direction: column;
