--- a/app/series/[id]/components/SeriesTopPanel/SeriesTopPanel.module.scss
+++ b/app/series/[id]/components/SeriesTopPanel/SeriesTopPanel.module.scss
@@ -10,10 +10,15 @@
     font-size: 14px;
   }
 
-  &__rate {
-    position: absolute;
-    bottom: 30px;
-    right: 40px;
+  &__rate--desktop {
+    display: none;
+
+    @include respond-to($mq-medium) {
+      display: block;
+      position: absolute;
+      bottom: 30px;
+      right: 40px;
+    }
   }
 
   &__details {
